# Retributio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.md  README.md  SFML1.sln  STRUCTURE.md  cpp.hint  run-clang-tidy.ps1  stage4_spatial_v2_diff.md  structure.txt  vcpkg.json
SFML1/: .clang-format  .clang-tidy  CMakeLists.txt  SFML1.vcxproj  SFML1.vcxproj.filters  main.cpp  main_skyguard.cpp  structure.txt
SFML1/DebugTests/: SFML1.exe.recipe  vc145.idb
SFML1/DebugTests/SFML1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SFML1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SFML1/assets/config/: debug_overlay.json  player.json
SFML1/assets/core/config/: debug_overlay.json  engine_settings.json
SFML1/data/definitions/: resources.json
SFML1/include/: pch.h
SFML1/include/adapters/entt/: entt_fwd.hpp
SFML1/include/adapters/json/: json_fwd.hpp  json_silent.hpp
SFML1/include/core/: anchor_policy.h  anchor_utils.h  config.h  config_keys.h  config_loader.h  game.h  i_resource.h  json_utils.h  json_validator.h  lock_behavior_factory.h  lock_policy.h  resize_behavior.h  resize_behavior_factory.h  resource_manager.h  scaling_policy.h  text_output.h  time_system.h
SFML1/include/core/compiler/: warnings.h
SFML1/include/core/config/: config_keys.h  config_loader.h  debug_overlay_config.h  engine_settings.h
SFML1/include/core/debug/: debug_config.h  scoped_timer.h
SFML1/include/core/ecs/: component.h  component_storage.h  entity.h  entity_manager.h  registry.h  stable_id_service.h  system.h  system_manager.h  world.h
SFML1/include/core/log/: log_categories.h  log_defaults.h  log_level.h  log_macros.h  logging.h
SFML1/include/core/resources/: font_resource.h  i_resource.h  resourceIDs.h  resource_holder.h  resource_holder.inl  resource_loader.h  resource_manager.h  resource_paths.h  soundbuffer_resource.h  texture_resource.h
SFML1/include/core/spatial/: aabb2.h  aabb2i.h  chunk_coord.h  entity_id32.h  spatial_index_v2.h
SFML1/include/core/time/: time_config.h  time_service.h
SFML1/include/core/ui/: anchor_policy.h  anchor_utils.h  lock_behavior.h  lock_behavior_factory.h  lock_policy.h  scaling_behavior.h  scaling_policy.h  viewport_utils.h
SFML1/include/core/utils/: file_loader.h  message.h
SFML1/include/entities/: player.h
SFML1/include/game/skyguard/: game.h
SFML1/include/utils/: message.h
SFML1/src/: pch.cpp
SFML1/src/core/: anchor_policy.cpp  config_loader.cpp  game.cpp  json_utils.cpp  lock_behavior_factory.cpp  lock_policy.cpp  resize_behavior.cpp  resize_behavior_factory.cpp  resource_,manager.cpp  scaling_policy.cpp  text_output.cpp  time_system.cpp
SFML1/src/core/config/: config_loader.cpp  debug_overlay_config.cpp
SFML1/src/core/ecs/: stable_id_service.cpp
SFML1/src/core/log/: log_level.cpp  logging.cpp  panic_sink_default.cpp
SFML1/src/core/resources/: resource_,manager.cpp  resource_loader.cpp  resource_manager.cpp  resource_manager_self_test.cpp  resource_paths.cpp
SFML1/src/core/spatial/: spatial_index.cpp  spatial_index_v2.cpp
SFML1/src/core/time/: time_service.cpp
SFML1/src/core/ui/: anchor_policy.cpp  lock_behavior.cpp  lock_behavior_factory.cpp  lock_policy.cpp  scaling_behavior.cpp  scaling_policy.cpp
SFML1/src/core/utils/: file_loader.cpp
SFML1/src/entities/: player.cpp
SFML1/src/game/skyguard/: game.cpp
SFML1/src/ui/: anchor_policy.cpp  lock_behavior_factory.cpp  lock_policy.cpp  scaling_policy.cpp
engine/: CMakeLists.txt
engine/assets/config/: debug_overlay.json  engine_settings.json
engine/cmake/: run_with_env.cmake
engine/include/: pch.h
engine/include/adapters/entt/: entt_registry.hpp
engine/include/adapters/xxhash/: xxhash.h
engine/include/core/compiler/: warnings.h
engine/include/core/config/: config_keys.h  engine_settings.h
engine/include/core/debug/: debug_config.h  scoped_timer.h
engine/include/core/ecs/: entity.h  system_manager.h  world.h
engine/include/core/log/: log_categories.h  log_defaults.h  log_level.h  log_macros.h  logging.h
engine/include/core/resources/: resource_manager.h
engine/include/core/spatial/: aabb2.h  chunk_coord.h  spatial_index.h  spatial_index_v2.h
engine/include/core/time/: time_config.h  time_service.h
engine/include/core/ui/: anchor_policy.h  anchor_utils.h  lock_behavior.h  scaling_behavior.h  viewport_utils.h
engine/include/core/utils/: math_constants.h
engine/src/: pch.cpp
engine/src/core/ecs/: world.cpp
engine/src/core/log/: logging.cpp
engine/src/core/spatial/: spatial_index.cpp
engine/src/core/ui/: anchor_policy.cpp
engine/src/core/utils/: file_loader.cpp
games/atrapacielos/: CMakeLists.txt
games/atrapacielos/assets/config/: atrapacielos.json  player.json  resources.json
games/atrapacielos/include/: game.h
games/atrapacielos/include/bootstrap/: scene_bootstrap.h
games/atrapacielos/include/config/: app_config.h  config_keys.h  config_paths.h  view_config.h  window_config.h
games/atrapacielos/include/dev/: overlay_extras.h  spatial_index_harness.h  stress_chunk_content_provider.h  stress_render_options.h  (+1 more)
games/atrapacielos/src/: game.cpp  main_atrapacielos.cpp
games/auctoritas/: CMakeLists.txt
games/auctoritas/src/: main_auctoritas.cpp
tests/: CMakeLists.txt
tests/atrapacielos/: CMakeLists.txt
tests/atrapacielos/src/: background_math_test.cpp
tests/engine/: CMakeLists.txt
tests/engine/include/: stable_key_seam.h  test_panic.h
tests/engine/src/: log_panic_sink_throw.cpp  resource_manager_test.cpp  resource_registry_test.cpp  stable_key_impl_seam.cpp  string_pool_test.cpp
tests/skyguard/: CMakeLists.txt
tests/skyguard/src/: background_math_test.cpp
tools/: CMakeLists.txt  check_layering.ps1  run-clang-tidy.ps1
tools/presets/: README.md  active_large.env  active_small.env
tools/presets/atrapacielos/: README.md  active_large.env  active_small.env
tools/src/: main_render_stress.cpp  main_stress_render.cpp  main_stress_spatial.cpp  spatial_index_harness.cpp
(+304 files in other folders)
